Fixed image overflow in blog pages.

--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,12 @@ h1.resumeSection{
     width: inherit;
 }
 
+#center-content img{
+    height: auto;
+    width: auto;
+    max-width: 90%;
+}
+
 .left-block.affix, .right-block.affix{
     top: 50px;
     width: inherit;
